<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="Text">text_question</string>
    <string name="text">Question 45/78</string>
    <string name="button_true">TRUE</string>
    <string name="button_false">FALSE</string>
    <string name="correct_answer" >correct</string>
    <string name="incorrect_answer" >incorrect</string>
    <string name="button_next">Next</string>
    <string name="placeholder">Hello everyone! i am the luckiest software engineer i the world!</string>
    <string name="textQuestion">Question: %d/%d</string>
    <string name="text_view_make">Questions loading...</string>
    <string name="scores">Scores...</string>
</resources>